# astrbot_plugin_treasure_bag_plugin

./: CODE_OF_CONDUCT.md  README.md  beauty_img_handler.py  chengyu_plugin.py  create_astrbot_meme.py  handwrite_handler.py  main.py  metadata.yaml  pyproject.toml  requirements.txt  sad_word_handler.py  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: Bandit.yml  CodeQL.yml  DependencyReview.yml  DevSkim.yml  OSSAR.yml  PublishToPyPI.yml  Pysa.yml  PythonDependencyAudit.yml  Qodana.yml  Scorecard.yml  dependency-review.yml  pyre.yml  release.yml  tfsec.yml
